--- a/vite/package.json
+++ b/vite/package.json
@@ -13,6 +13,7 @@
     "@azure/openai": "^1.0.0-beta.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.2",
     "recoil": "^0.7.7",
     "tailwind": "^4.0.0"
