--- a/vite/package.json
+++ b/vite/package.json
@@ -16,6 +16,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.2",
     "recoil": "^0.7.7",
+    "sweetalert2": "^11.10.6",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
